--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
+  "name": "www-arqueria-pro",
+  "version": "0.1.0",
   "private": true,
-  "name": "gatsby",
-  "version": "1.0.0",
-  "dependencies": {
-    "@material-ui/core": "^4.9.10",
-    "@material-ui/icons": "^4.9.1",
-    "gatsby": "^2.18.14",
-    "gatsby-image": "^2.0.15",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-typography": "^2.4.1",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.19",
-    "typography": "^0.16.19"
-  },
-  "devDependencies": {
-    "@now/node": "^1.3.0"
-  },
   "scripts": {
-    "dev": "gatsby develop",
-    "build": "gatsby build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@types/node": "20.2.6",
+    "@types/react": "18.2.9",
+    "@types/react-dom": "18.2.4",
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.4",
+    "next": "13.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.1.3"
   }
 }
